Updates from ShareLaTeX

--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -16,6 +16,7 @@
 \newacronym{hmac}{HMAC}{Hash-based Message Authentication Code}
 \newacronym{rsa}{RSA}{Rivest-Shamir-Adleman}
 \newacronym{sha}{SHA}{Secure Hash Algorithm}
+\newacronym{sha256}{SHA256}{Secure Hash Algorithm c/ 256bits}
 
 %%bcrypt
 \newacronym{owasp}{OWASP}{Open Web Application Security Project}
@@ -30,3 +31,4 @@
 \newacronym{fpga}{FPGA}{Field-programmable gate array}
 \newacronym{asic}{ASIC}{Application-specific integrated circuit}
 \newacronym{usenix}{USENIX}{The Advanced Computing Systems Association}
+\newacronym{posix}{POSIX}{Portable Operating System Interface}
