--- a/sections/2_sota.tex
+++ b/sections/2_sota.tex
@@ -308,11 +308,54 @@ Infelizmente a resposta é que este ajuste é deveras impossível. O simples aum
 
 Felizmente, tal aplicação de hardware pare este efeito ainda não foi detetada no mundo real e não aparenta qualquer problema de momento.
 
-%\cleardoublepage
-%\section{Autenticação através do Auth.Gov}
+\cleardoublepage
+\subsection{Armazenamento e validação de sessões}
 
-%\subsection{SAML 2.0}
-%\subsection{SSL/TLS}
+De modo a fazer uma gestão de utilizadores mais aprofundada, foi necessário implementar métodos capazes de não só limitar o número de utilizadores ativos a cada dado momento, mas também manter as sessões iniciadas no caso de falha do servidor.
+
+\subsubsection{Validação através de JSON Web Token}
+
+Numa primeira fase do projeto \gls{clav} foi implementada uma solução baseada em \emph{JSON Web Token}, que será explicada no capítulo seguinte. Embora esta se tenha provado eficaz, a mesma não era capaz de manter as sessões iniciadas no caso de uma falha súbita do servidor, ou seja, se o servidor por algum motivo sofresse de uma falha de energia e tivesse de reiniciar, devido às sessões estarem guardadas localmente, as mesmas eram perdidas.
+
+Outro fator decisivo contra esta implementação assenta no facto de não ser possível recorrer ao paralelismo da aplicação através do \emph{nginx}\footnote{Mais informação em \url{https://www.nginx.com}}, pois a comunicação entre processos paralelos não permite a partilha do token guardado localmente.
+
+Para tal, foi necessário recorrer a outra abordagem, o armazenamento de sessões em base de dados, neste caso em \emph{MongoDB}.
+
+\subsubsection{Armazenamento em MongoDB}
+
+O armazenamento de sessões em \emph{MongoDB} permite uma maior flexibilidade comparativamente com o armazenamento local.
+
+Em primeiro lugar é possível recorrer ao paralelismo da aplicação via \emph{nginx} ou outras soluções similares, pois cada \emph{thread} pode correr independentemente umas da outras e a comunicação entre processos paralelos passa a ser inexistente. Para validar sessões cada \emph{thread} faz uma \emph{query} à base de dados, verificando se a sessão do utilizador é válida.
+
+Permite também que na ocorrência de uma falha súbita do sistema, as informações relativas às sessões não se percam devido a estarem armazenadas em base de dados. Assim sendo, após o \emph{boot} do sistema, os utilizadores continuam com as sessões ativas, algo que não aconteceria se fosse utilizado armazenamento local e validação via \gls{jwt}.
+
+Um possível problema desta solução seria que iríamos delegar o armazenamento das sessões para o lado do servidor, ou seja, se por ventura existissem milhões de sessões armazenadas, iria ser ocupado um tamanho substancial de memória em disco. Para evitar tal problema, é utilizado o módulo \emph{\textbf{connect-mongo}}\footnote{\url{https://github.com/jdesboeufs/connect-mongo}} que permite a auto remoção de sessões expiradas, bem como a atribuição de um tempo máximo após o qual a sessão expira.
+
+Para atingir este objetivo, apenas é necessário adicionar os campos abaixo mencionados à sessão do \emph{ExpressJS}.
+
+\begin{verbatim}
+    app.use(session({
+        ...
+        autoRemove: 'interval',
+        autoRemoveInterval: 15, //minutes
+        store: new MongoStore({
+            url: dataBases.userDB,
+            ttl: 1800 //seconds
+        })
+    }));
+\end{verbatim}
+
+Esta configuração do módulo \emph{\textbf{connect-mongo}} faz com que a cada 15 minutos seja invocada a função de remoção de sessões expiradas, sendo que cada sessão apenas é válida durante 1800 segundos, ou seja, 30 minutos.
+
+Em suma, o armazenamento de sessões em base de dados possui todas as qualidades da validação via \emph{JSON Web Token}, oferecendo uma maior flexibilidade e customização, sem impacto na performance do servidor.
+
+\cleardoublepage
+\section{Autenticação através do Auth.Gov}
+
+Embora ainda nao tenha implementado isto, falo sobre o que li?
+
+\subsection{SAML 2.0}
+\subsection{SSL/TLS}
 
 \cleardoublepage
 \section{Autenticação de pedidos via API}
@@ -423,11 +466,75 @@ Embora seja impossível retirar alguma informação útil do \emph{token} exempl
 \cleardoublepage
 \subsubsection{Implementação do JSON Web Token}
 
-Numa fase inicial do projeto \gls{clav} 
+Durante o desenvolvimento do projeto \gls{clav} foi discutida a implementação de um mecanismo capaz de terminar sessões automaticamente, de modo a diminuir o número de sessões ativas, bem como evitar possíveis falhas de segurança.
+
+Para tal foi implementado, juntamente com o \emph{Passport}, uma estratégia capaz de lidar com \gls{jwt}, representada através do seguinte pseudo código.
+
+\begin{algorithm}
+    \caption{Pseudo código da autenticação via \emph{JSON Web Token}.}
+    \begin{algorithmic}[1]
+        \Function{JwtStrategy}{opts, jwt\_payload, done}
+        \State $user \gets findUserByJwt(jwt\_payload.id)$
+        \If {$user \neq invalid$}
+            \State \textbf{return} done(null, user)
+        \Else
+            \State \textbf{return} done(null, false)
+        \EndIf
+    \EndFunction
+    \end{algorithmic}
+\end{algorithm}
+
+Como explicado na secção anterior, através do uso do \emph{JSON Web Token} é possível passar no atributo \emph{exp} uma data de expiração, após a qual o token se torna inválido, terminando assim a sessão do utilizador.
+
+Para tal, quando a estratégia de login local do \emph{Passport} é invocada, é necessário proceder à assinatura de um token \gls{jwt} e atribuí-lo à sessão do utilizador atual.
+
+\begin{algorithm}
+    \caption{Pseudo código da atribuição de um \gls{jwt} à sessão.}
+    \begin{algorithmic}[1]
+        \Function{login}{user}
+        \State $token \gets jwt.sign({user}, jwt.secret, \{$
+        \State \indent $expiresIn : jwt.expiration$
+        \State $\}$
+        \State $session.token \gets token$
+    \EndFunction
+    \end{algorithmic}
+\end{algorithm}
+
+Os valores de \emph{secret} e \emph{expiration} previamente utilizados são provenientes de um ficheiro externo, no qual designamos a duração (em segundos) em que a sessão está ativa, bem como a chave secreta utilizada para a assinatura.
+
+\begin{verbatim}
+    jwt: {
+        secret: 'ihfH6Cv4LVD1YoG...vY8XdVch5ebGHTdPMDGHy',
+        expiration: 3000 //in seconds
+    }
+\end{verbatim}
+
+Após corretamente atribuída a sessão a um utilizador, cada vez que o mesmo pretende aceder a páginas restritas, como por exemplo, a adição de entidades à plataforma \gls{clav} é realizada uma chamada ao \emph{middleware} de autenticação \emph{isLoggedIn}, o qual verifica se existe um utilizador com sessão iniciada, bem como se o token do mesmo ainda não expirou, sendo esta lógica representada através do seguinte pseudo código.
+
+\begin{algorithm}
+    \caption{Pseudo código da função  de middleware \emph{isLoggedIn}.}
+    \begin{algorithmic}[1]
+        \Function{isLoggedIn}{req, res, next}
+        \If {$req.isAuthenticated()$}
+        \State $result \gets jwt.verify(session.token, jwt.secret)$
+            \If {$result \neq expired$}
+                \State \textbf{return} next()
+            \Else
+                \State \textbf{return} err
+            \EndIf
+        \EndIf
+    \EndFunction
+    \end{algorithmic}
+\end{algorithm}
+
+Embora esta implementação do \emph{JSON Web Token} estivesse 100\% funcional, a mesma foi abandonada da gestão de utilizadores por uma alternativa similar, o armazenamento de sessões ativas diretamente na base de dados em \emph{MongoDB}, sendo apenas utilizado o \gls{jwt} na autenticação de pedidos à \gls{api}.
 
 \cleardoublepage
-\subsubsection{Falhas do JSON Web Token}
+\subsubsection{Vulnerabilidades do JSON Web Token}
+
+TODO
 
 \cleardoublepage
 \section{Autenticação backend}
-%checkLevel? será isto?
+
+Aqui falo das diversas funçoes de middleware que verificam se o utilizador tem nível de acesso adequado? Nao parece haver muito mais para dizer
