Updates from ShareLaTeX

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1,17 +1,56 @@
-@book{KeR88
-  , author    = {B.W. Kernighan and D.M. Ritchie}
-  , title     = {The C Programming Language (ANSI C)}
-  , edition   = {2nd}
-  , publisher = {Prentice Hall Software series}
-  , year      = {1988}
-  , keywords  = {Programming, Imperative}
+%%introducao
+
+@techreport{artigoOECD
+  , title     = "Making Life Easy for Citizens and Businesses in Portugal: Administrative Simplification and e-Government"
+  , author    = "Organisation for Economic Co-operation and Development"
+  , institution = "OECD"
+  , year      = "2009"
+  , note      = "ISBN 978-92-64-04788"
 }
 
-@book{GRM97
-  , title     = {The LaTeX Graphics Companion}
-  , author    = {Michel Goossens and Sebastian Rahtz and Frank Mittelbach}
-  , publisher = {Addison-Wesley}
-  , year      = {1997}
-  , note      = {ISBN 0-201-85469-4}
-  , keywords  = {LaTeX, Programming, Graphics}
+@misc{papZero
+  , title        = {"Papel Zero": Administração Pública tem de reduzir pelo menos 20\%}
+  , howpublished = {O Jornal Económico. [online] \url{https://jornaleconomico.sapo.pt/noticias/papel-zero-administracao-publica-reduzir-pelo-menos-20-11847}}
+  , note         = {Consult. 23 Set. 2018}
+}
+
+@article{congressoBAD
+  , title     = "Transformação digital: novas políticas e procedimentos para a classificação e avaliação da informação."
+  , author    = "Lourenço, Alexandra and Ramalho, José Carlos and Gago, Maria Rita and Penteado, Pedro"
+  , year      = "2018"
+  , note      = "Consult. 22 Set. 2018. "
+}
+
+@article{confGIA
+  , title     = "Plataforma M51-CLAV: o que há de novo?"
+  , author    = "Lourenço, Alexandra and Gago, Maria Rita and Penteado, Pedro and Ramalho, José Carlos"
+  , year      = "2017"
+  , note      = "Consult. 23 Set. 2018; Dísponivel em: \url{https://www.bad.pt/eventos/wp-content/uploads/2018/01/CIGIA_COM_01.pdf}"
+}
+
+@misc{compete2020
+  , title        = "Operações de Modernização e Capacitação da Administração Pública"
+  , howpublished = "Compete2020 [online] \url{http://www.poci-compete2020.pt/concursos/detalhe/Aviso_02_SAMA2020_2016}"
+  , note         = {Consult. 23 Set. 2018}
+}
+
+%%SOTA
+
+%%Encriptacao
+
+@misc{hashFunction,
+    title = {Re-Hashed: The Difference Between SHA-1, SHA-2 and SHA-256 Hash Algorithms},
+    author = {Vincent Lynch},
+    note = {[Online; Consult. 10 Jan. 2019]},
+    url = {https://www.thesslstore.com/blog/wp-content/uploads/2018/08/Hashing.png}
+}
+
+
+%%JWT
+
+@misc{jwtLogo,
+    title = {JSON Web Tokens},
+    author = {Auth0},
+    note = {[Online; Consult. 12 Jan. 2019]},
+    url = {https://jwt.io}
 }
