--- a/dissertation.sty
+++ b/dissertation.sty
@@ -182,8 +182,9 @@
 %\usetikzlibrary{shapes,arrows}
 
 % Better looking bibliography references
-\usepackage[round]{natbib}
-\bibliographystyle{plainnat}
+\usepackage[round,numbers]{natbib}
+%\bibliographystyle{plainnat}
+\bibliographystyle{unsrt}
 
 % Getting things done in LaTeX
 \usepackage{todonotes}
