--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -2,10 +2,12 @@
 \newacronym{mei}{MEI}{Mestrado em Engenharia Informática}
 \newacronym{di}{DI}{Departamento de Informática}
 \newacronym{um}{UM}{Universidade do Minho}
+\newacronym{dglab}{DGLAB}{Direção-Geral do Livro, dos Arquivos e das Bibliotecas}
 
 %clav
 \newacronym{clav}{CLAV}{Projeto M51-CLAV-Arquivo digital: Plataforma modular de classificação e avaliação da informação pública}
 \newacronym{ap}{AP}{Administração Pública}
+\newacronym{lc}{LC}{Lista Consolidada}
 \newacronym{cc}{CC}{Cartão de Cidadão}
 \newacronym{cmd}{CMD}{Chave Móvel Digital}
 \newacronym{ama}{AMA}{Agência para a Modernização Administrativa}
