--- a/sections/2_sota.tex
+++ b/sections/2_sota.tex
@@ -50,7 +50,7 @@ Em qualquer aplicação no mundo real, é impensável guardar dados sensíveis, 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.75\textwidth]{img/bcrypt/Hashing.png}
-    \caption{Representação de uma função de \emph{hash}. ADICIONAR FONTE}
+    \caption{Representação de uma função de \emph{hash}.\cite{hashFunction}}
 \end{figure}
 
 Em geral, o \emph{hashing} é caraterizado como uma operação de sentido único, através da qual se gera um resultado único, impossível de reverter para o texto original.
@@ -373,7 +373,7 @@ Estes cuidados ajudam a evitar problemas, tais como ataques à \gls{api} atravé
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.75\textwidth]{img/jwt/jwtlogo.png}
-    \caption{Logótipo do \emph{JSON Web Token}. ADICIONAR FONTE}
+    \caption{Logótipo do \emph{JSON Web Token}. \cite{jwtLogo}}
 \end{figure}
 
 Mas o que define um \gls{jwt}? Um \gls{jwt} é nada mais que um \emph{standard RFC 7519}\footnote{Mais informação em \url{https://tools.ietf.org/html/rfc7519}} desenvolvido para a troca de pedidos em ambientes cujo espaço é limitado. 
