--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,3 +1,9 @@
 \chapter*{Abstract}
 
-TODO
+There's a ever further growing worry about the quantity of information that's generated and received by multiple institutions. Not only related to the excessive ammount of paper consumed, but as well as the management of such big quantities of information.
+
+With the purpose of simplifying the process of managing such documents, the portuguese government has been developing various strategies. Namely, in the Public Administration, with directives provided by the European Comission.
+
+The \gls{clav} project comes up as one of those strategies. This allows to classify and evaluate all the documentation that circulates in the Portuguese Public Administration, using a common referential, that allows for the development of instruments of transversal nature that are applied in an organizational context.
+
+This dissertation has as its primary objective, the integration of the services provided by the \emph{Autenticação.Gov} plataform in the \gls{clav} project, as well as the creation of appropriate strategies of user management, authentication of requests refering to the public API, as well as  backend authentication.
