--- a/sections/1_introducao.tex
+++ b/sections/1_introducao.tex
@@ -4,21 +4,21 @@
 
 Os processos burocráticos, administrativos e logísticos a que hoje as instituições estão sujeitas levam à produção de grandes quantidades de informação que, na sua maioria devem estar disponíveis para consulta a longo-termo, não só por motivos legais, mas também por questões associadas à preservação de dados arquivísticos. 
 
-A grande quantidade de informação produzida desencadeia longos e complexos processos que arrecadam para as instituições despesas elevadas e impacto ambiental significativo. A incomportabilidade deste contexto, torna a desmaterialização dos processos fundamental, que se identifica como uma medida enquadrada no eixo estratégico do desenvolvimento sustentável.[1]
+A grande quantidade de informação produzida desencadeia longos e complexos processos que arrecadam para as instituições despesas elevadas e impacto ambiental significativo. A incomportabilidade deste contexto, torna a desmaterialização dos processos fundamental, que se identifica como uma medida enquadrada no eixo estratégico do desenvolvimento sustentável.\cite{artigoOECD}
 
-O Governo tem neste sentido, desenvolvido estratégias para a transformação digital, nomeadamente, na Administração Pública (AP), tendo por base normas e orientações provenientes da Comissão Europeia. Entre outros, pretende-se a redução do consumo de papel na mesma [2], através da desmaterialização de processos, da promoção da adoção de sistemas de gestão documental eletrónica ou outros, bem como a digitalização de documentos destinados a ser arquivados. 
+O Governo tem neste sentido, desenvolvido estratégias para a transformação digital, nomeadamente, na Administração Pública, tendo por base normas e orientações provenientes da Comissão Europeia. Entre outros, pretende-se a redução do consumo de papel na mesma \cite{papZero}, através da desmaterialização de processos, da promoção da adoção de sistemas de gestão documental eletrónica ou outros, bem como a digitalização de documentos destinados a ser arquivados. 
 
-Uma das medidas previstas foi a adoção de processos de «classificação, avaliação e seleção de informação, tendo em consideração, sempre que possível, os princípios de uma Macroestrutura Funcional (MEF) e a Avaliação Supra-Institucional da Informação Arquivística (ASIA)».[3][4]
+Uma das medidas previstas foi a adoção de processos de «classificação, avaliação e seleção de informação, tendo em consideração, sempre que possível, os princípios de uma Macroestrutura Funcional (MEF) e a Avaliação Supra-Institucional da Informação Arquivística (ASIA)».\cite{congressoBAD}\cite{confGIA}
 
-Assim sendo, surgiu o “Projeto M51-CLAV-Arquivo digital: Plataforma modular de classificação e avaliação da informação pública”, projeto nacional financiado pela Direção-Geral do Livro, dos Arquivos e das Bibliotecas (DGLAB) em colaboração com a Universidade do Minho, no âmbito do Aviso N.º 02/SAMA2020/2016 (fazer referencia), para dar cumprimento à Medida 51 do Simplex + “Arquivo digital”. 
+Assim sendo, surgiu o “Projeto M51-CLAV-Arquivo digital: Plataforma modular de classificação e avaliação da informação pública”, projeto nacional financiado pela \gls{dglab} em colaboração com a \gls{um}, no âmbito do Aviso N.º 02/SAMA2020/2016\cite{compete2020}, para dar cumprimento à Medida 51 do Simplex + “Arquivo digital”. 
 
 O Simplex é um programa do governo que visa a simplificação legislativa e administrativa, e a modernização dos serviços públicos. Em particular, com o objetivo de tornar a Administração Pública mais eficiente surgiu o “Arquivo Digital” do Ministério da Cultura. Este pretende utilizar instrumentos transversais de gestão da informação, com o fim de classificar e avaliar todos os documentos produzidos e recebidos nos organismos públicos. 
 
 Estes instrumentos serão disponibilizados por uma plataforma modular de serviços partilhados, com a possibilidade de integração com os sistemas de informação existentes em qualquer organismo, sendo que esta plataforma também permite a desmaterialização dos procedimentos, atualmente obrigatórios, para se poder eliminar documentação em papel no Estado.
 
-Através de um projeto colaborativo que envolveu grande parte dos organismos da AP, Central e Local, foi originada a Lista Consolidada (LC) para a classificação e avaliação da informação pública. Esta LC foi desenvolvida usando uma abordagem supra-institucional e funcional, cujo valor maior é a interoperabilidade semântica, viabilizada pela criação de uma linguagem comum e transversal à AP, que resultou, entre outros aspetos, na criação de códigos de classificação comuns.
+Através de um projeto colaborativo que envolveu grande parte dos organismos da Admi-nistração Pública, Central e Local, foi originada a \gls{lc} para a classificação e avaliação da informação pública. Esta \gls{lc} foi desenvolvida usando uma abordagem supra-institucional e funcional, cujo valor maior é a interoperabilidade semântica, viabilizada pela criação de uma linguagem comum e transversal à Administração Pública, que resultou, entre outros aspetos, na criação de códigos de classificação comuns.
 
-Este trabalho enquadra-se no Projeto CLAV, nas suas terceiras e quarta fase de desenvolvimento, na implementação de uma aplicação Web para a gestão e manutenção da plataforma CLAV. 
+Este trabalho enquadra-se no Projeto \gls{clav}, nas suas terceiras e quarta fase de desenvolvimento, na implementação de uma aplicação Web para a gestão e manutenção da plataforma \gls{clav}. 
 
 %\cleardoublepage
 %\section{Motivação}
@@ -33,6 +33,7 @@ A realização desta dissertação tem como objetivo os seguintes pontos:
 \begin{itemize}
     \item Estudo e interpretação dos serviços da plataforma Autenticação.Gov e respetivos requisitos.
     \item Integração e desenvolvimento de métodos apropriados de registo e login de utilizadores, bem como a gestão dos mesmos, utilizando a ferramenta Autenticação.Gov.
+    \item Criação de métodos apropriados para autenticação de pedidos via a API pública disponibilizada.
     \item Avaliação dos métodos gerados, garantindo assim uma correta implementação dos mesmos na plataforma M51-CLAV.
 \end{itemize}
 
@@ -44,9 +45,7 @@ A metodologia para a realização desta dissertação segue os seguintes passos:
 
 \begin{itemize}
     \item Leitura e análise inicial do projeto.
-    \item Estudo da ferramenta Autenticação.Gov e requisitos por ela
-impostos.
-    \item Desenvolvimento de um protótipo com funcionalidades
-semelhantes ou idênticas à esperada.
+    \item Estudo da ferramenta Autenticação.Gov e requisitos por ela impostos.
+    \item Desenvolvimento de um protótipo com funcionalidades semelhantes ou idênticas à esperada.
     \item Implementação na plataforma M51-CLAV.
 \end{itemize}
