Updates from ShareLaTeX

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -54,3 +54,24 @@
     note = {[Online; Consult. 12 Jan. 2019]},
     url = {https://jwt.io}
 }
+
+@misc{jwtAPI,
+    title = {JWT to authenticate Servers API’s},
+    author = {Rachit Gulati},
+    note = {[Online; Consult. 13 Jan. 2019]},
+    url = {https://codeburst.io/jwt-to-authenticate-servers-apis-c6e179aa8c4e}
+}
+
+@misc{jwtDiagram,
+    title = {Securing Golang API using Json Web Token},
+    author = {Raúl González Martínez},
+    note = {[Online; Consult. 13 Jan. 2019]},
+    url = {https://medium.com/@raul_11817/securing-golang-api-using-json-web-token-jwt-2dc363792a48}
+}
+
+@article{rfc6750
+  , title     = "The OAuth 2.0 Authorization Framework: Bearer Token Usage"
+  , author    = "Jones, M. and Hardt, D."
+  , year      = "2012"
+  , note      = "ISSN: 2070-1721, Consult. 13 Jan. 2019; Dísponivel em: \url{https://tools.ietf.org/pdf/rfc6750.pdf}"
+}
