--- a/sections/2_sota.tex
+++ b/sections/2_sota.tex
@@ -313,14 +313,78 @@ Felizmente, tal aplicação de hardware pare este efeito ainda não foi detetada
 
 De modo a fazer uma gestão de utilizadores mais aprofundada, foi necessário implementar métodos capazes de não só limitar o número de utilizadores ativos a cada dado momento, mas também manter as sessões iniciadas no caso de falha do servidor.
 
-\subsubsection{Validação através de JSON Web Token}
-
-Numa primeira fase do projeto \gls{clav} foi implementada uma solução baseada em \emph{JSON Web Token}, que será explicada no capítulo seguinte. Embora esta se tenha provado eficaz, a mesma não era capaz de manter as sessões iniciadas no caso de uma falha súbita do servidor, ou seja, se o servidor por algum motivo sofresse de uma falha de energia e tivesse de reiniciar, devido às sessões estarem guardadas localmente, as mesmas eram perdidas.
+Numa primeira fase do projeto \gls{clav} foi implementada uma solução baseada em \emph{JSON Web Token}, que será explicada na subsecção seguinte. Embora esta se tenha provado eficaz, a mesma não era capaz de manter as sessões iniciadas no caso de uma falha súbita do servidor, ou seja, se o servidor por algum motivo sofresse de uma falha de energia e tivesse de reiniciar, devido às sessões estarem guardadas localmente, as mesmas eram perdidas.
 
 Outro fator decisivo contra esta implementação assenta no facto de não ser possível recorrer ao paralelismo da aplicação através do \emph{nginx}\footnote{Mais informação em \url{https://www.nginx.com}}, pois a comunicação entre processos paralelos não permite a partilha do token guardado localmente.
 
 Para tal, foi necessário recorrer a outra abordagem, o armazenamento de sessões em base de dados, neste caso em \emph{MongoDB}.
 
+\subsubsection{Validação através de JSON Web Token}
+
+Durante o desenvolvimento do projeto \gls{clav} foi discutida a implementação de um mecanismo capaz de terminar sessões automaticamente, de modo a diminuir o número de sessões ativas, bem como evitar possíveis falhas de segurança.
+
+Para tal foi implementado, juntamente com o \emph{Passport}, uma estratégia capaz de lidar com \gls{jwt}, representada através do seguinte pseudo código.
+
+\begin{algorithm}
+    \caption{Pseudo código da autenticação via \emph{JSON Web Token}.}
+    \begin{algorithmic}[1]
+        \Function{JwtStrategy}{opts, jwt\_payload, done}
+        \State $user \gets findUserByJwt(jwt\_payload.id)$
+        \If {$user \neq invalid$}
+            \State \textbf{return} done(null, user)
+        \Else
+            \State \textbf{return} done(null, false)
+        \EndIf
+    \EndFunction
+    \end{algorithmic}
+\end{algorithm}
+
+Como explicado na secção anterior, através do uso do \emph{JSON Web Token} é possível passar no atributo \emph{exp} uma data de expiração, após a qual o token se torna inválido, terminando assim a sessão do utilizador.
+
+Para tal, quando a estratégia de login local do \emph{Passport} é invocada, é necessário proceder à assinatura de um token \gls{jwt} e atribuí-lo à sessão do utilizador atual.
+
+\begin{algorithm}
+    \caption{Pseudo código da atribuição de um \gls{jwt} à sessão.}
+    \begin{algorithmic}[1]
+        \Function{login}{user}
+        \State $token \gets jwt.sign({user}, jwt.secret, \{$
+        \State \indent $expiresIn : jwt.expiration$
+        \State $\}$
+        \State $session.token \gets token$
+    \EndFunction
+    \end{algorithmic}
+\end{algorithm}
+
+Os valores de \emph{secret} e \emph{expiration} previamente utilizados são provenientes de um ficheiro externo, no qual designamos a duração (em segundos) em que a sessão está ativa, bem como a chave secreta utilizada para a assinatura.
+
+\begin{verbatim}
+    jwt: {
+        secret: 'ihfH6Cv4LVD1YoG...vY8XdVch5ebGHTdPMDGHy',
+        expiration: 3000 //in seconds
+    }
+\end{verbatim}
+
+Após corretamente atribuída a sessão a um utilizador, cada vez que o mesmo pretende aceder a páginas restritas, como por exemplo, a adição de entidades à plataforma \gls{clav} é realizada uma chamada ao \emph{middleware} de autenticação \emph{isLoggedIn}, o qual verifica se existe um utilizador com sessão iniciada, bem como se o token do mesmo ainda não expirou, sendo esta lógica representada através do seguinte pseudo código.
+
+\begin{algorithm}
+    \caption{Pseudo código da função  de middleware \emph{isLoggedIn}.}
+    \begin{algorithmic}[1]
+        \Function{isLoggedIn}{req, res, next}
+        \If {$req.isAuthenticated()$}
+        \State $result \gets jwt.verify(session.token, jwt.secret)$
+            \If {$result \neq expired$}
+                \State \textbf{return} next()
+            \Else
+                \State \textbf{return} err
+            \EndIf
+        \EndIf
+    \EndFunction
+    \end{algorithmic}
+\end{algorithm}
+
+Embora esta implementação do \emph{JSON Web Token} estivesse 100\% funcional, a mesma foi abandonada da gestão de utilizadores por uma alternativa similar, o armazenamento de sessões ativas diretamente na base de dados em \emph{MongoDB}, sendo apenas utilizado o \gls{jwt} na autenticação de pedidos à \gls{api}.
+
+\cleardoublepage
 \subsubsection{Armazenamento em MongoDB}
 
 O armazenamento de sessões em \emph{MongoDB} permite uma maior flexibilidade comparativamente com o armazenamento local.
@@ -368,7 +432,7 @@ A essência do \gls{jwt} assenta no facto do token ser ou não válido, ou seja,
 
 Estes cuidados ajudam a evitar problemas, tais como ataques à \gls{api} através de sucessivas chamadas num curto espaço de tempo, o que provoca uma sobrecarga no sistema.
 
-\subsection{JSON Web Token}
+\subsection{Introdução ao JSON Web Token}
 
 \begin{figure}[h]
     \centering
@@ -464,75 +528,41 @@ Embora seja impossível retirar alguma informação útil do \emph{token} exempl
 \end{itemize}
 
 \cleardoublepage
-\subsubsection{Implementação do JSON Web Token}
-
-Durante o desenvolvimento do projeto \gls{clav} foi discutida a implementação de um mecanismo capaz de terminar sessões automaticamente, de modo a diminuir o número de sessões ativas, bem como evitar possíveis falhas de segurança.
-
-Para tal foi implementado, juntamente com o \emph{Passport}, uma estratégia capaz de lidar com \gls{jwt}, representada através do seguinte pseudo código.
-
-\begin{algorithm}
-    \caption{Pseudo código da autenticação via \emph{JSON Web Token}.}
-    \begin{algorithmic}[1]
-        \Function{JwtStrategy}{opts, jwt\_payload, done}
-        \State $user \gets findUserByJwt(jwt\_payload.id)$
-        \If {$user \neq invalid$}
-            \State \textbf{return} done(null, user)
-        \Else
-            \State \textbf{return} done(null, false)
-        \EndIf
-    \EndFunction
-    \end{algorithmic}
-\end{algorithm}
-
-Como explicado na secção anterior, através do uso do \emph{JSON Web Token} é possível passar no atributo \emph{exp} uma data de expiração, após a qual o token se torna inválido, terminando assim a sessão do utilizador.
-
-Para tal, quando a estratégia de login local do \emph{Passport} é invocada, é necessário proceder à assinatura de um token \gls{jwt} e atribuí-lo à sessão do utilizador atual.
-
-\begin{algorithm}
-    \caption{Pseudo código da atribuição de um \gls{jwt} à sessão.}
-    \begin{algorithmic}[1]
-        \Function{login}{user}
-        \State $token \gets jwt.sign({user}, jwt.secret, \{$
-        \State \indent $expiresIn : jwt.expiration$
-        \State $\}$
-        \State $session.token \gets token$
-    \EndFunction
-    \end{algorithmic}
-\end{algorithm}
-
-Os valores de \emph{secret} e \emph{expiration} previamente utilizados são provenientes de um ficheiro externo, no qual designamos a duração (em segundos) em que a sessão está ativa, bem como a chave secreta utilizada para a assinatura.
-
-\begin{verbatim}
-    jwt: {
-        secret: 'ihfH6Cv4LVD1YoG...vY8XdVch5ebGHTdPMDGHy',
-        expiration: 3000 //in seconds
-    }
-\end{verbatim}
-
-Após corretamente atribuída a sessão a um utilizador, cada vez que o mesmo pretende aceder a páginas restritas, como por exemplo, a adição de entidades à plataforma \gls{clav} é realizada uma chamada ao \emph{middleware} de autenticação \emph{isLoggedIn}, o qual verifica se existe um utilizador com sessão iniciada, bem como se o token do mesmo ainda não expirou, sendo esta lógica representada através do seguinte pseudo código.
-
-\begin{algorithm}
-    \caption{Pseudo código da função  de middleware \emph{isLoggedIn}.}
-    \begin{algorithmic}[1]
-        \Function{isLoggedIn}{req, res, next}
-        \If {$req.isAuthenticated()$}
-        \State $result \gets jwt.verify(session.token, jwt.secret)$
-            \If {$result \neq expired$}
-                \State \textbf{return} next()
-            \Else
-                \State \textbf{return} err
-            \EndIf
-        \EndIf
-    \EndFunction
-    \end{algorithmic}
-\end{algorithm}
-
-Embora esta implementação do \emph{JSON Web Token} estivesse 100\% funcional, a mesma foi abandonada da gestão de utilizadores por uma alternativa similar, o armazenamento de sessões ativas diretamente na base de dados em \emph{MongoDB}, sendo apenas utilizado o \gls{jwt} na autenticação de pedidos à \gls{api}.
-
-\cleardoublepage
 \subsubsection{Vulnerabilidades do JSON Web Token}
 
 TODO
+
+\cleardoublepage
+\subsection{Autenticação de pedidos à API}
+
+De modo a proceder à autenticação de pedidos à \gls{api}, irá ser implementado um sistema baseado em \emph{JSON Web Tokens}.
+
+Esta implementação seguirá as normas propostas pelo \emph{"OAuth 2.0 Authorization Framework: Bearer Token Usage"}\cite{rfc6750}, utilizando para o efeito um header HTTP do tipo \emph{Authorization}, com esquema de autenticação \emph{Bearer}\footnote{Mais informação em \url{https://www.iana.org/assignments/http-authschemes/http-authschemes.xhtml}}.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.75\textwidth]{img/jwt/diagramafluxoJWT.png}
+    \caption{Diagrama correspondente à autenticação baseda em tokens. \cite{jwtDiagram}}
+\end{figure}
+
+O sistema de autenticação a ser implementado seguirá o diagrama previamente descrito, ou seja:
+
+\begin{enumerate}
+    \item É realizada a autenticação de um elemento externo no nosso servidor.
+    \item Caso a autenticação tenha sucesso, irá ser devolvido um \gls{jwt} que irá servir de \emph{API Key} para a autenticação de chamadas à mesma.
+    \item Cada vez que é feita uma chamada à \gls{api}, o token presente no campo \emph{Authorization} irá ser validado.
+    \item Caso este seja validado com sucesso, irá ser retornado o output da chamada à API solicitada.
+\end{enumerate}
+
+Outra possibilidade de implementação é descrita a seguir, onde no servidor 3 (neste caso, o servidor responsável por correr o projeto \gls{clav}), possui uma lista de \emph{API Key} válidas (neste caso, \gls{jwt}).
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\textwidth]{img/jwt/jwtAPI.png}
+    \caption{Representação da utilização de \emph{JSON Web Token} para autenticação de pedidos à API. \cite{jwtAPI}}
+\end{figure}
+
+Cada vez que uma chamada à \gls{api} é feita, irá ser verificado se o \emph{token} dos utilizadores (representados por consumidores na imagem), está presente na lista de chaves pré validadas.
 
 \cleardoublepage
 \section{Autenticação backend}
