Updates from ShareLaTeX

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -11,21 +11,18 @@
 @misc{papZero
   , title        = {"Papel Zero": Administração Pública tem de reduzir pelo menos 20\%}
   , howpublished = {O Jornal Económico. [online] \url{https://jornaleconomico.sapo.pt/noticias/papel-zero-administracao-publica-reduzir-pelo-menos-20-11847}}
-  , note         = {Consult. 23 Set. 2018}
 }
 
 @article{congressoBAD
   , title     = "Transformação digital: novas políticas e procedimentos para a classificação e avaliação da informação."
   , author    = "Lourenço, Alexandra and Ramalho, José Carlos and Gago, Maria Rita and Penteado, Pedro"
   , year      = "2018"
-  , note      = "Consult. 22 Set. 2018. "
 }
 
 @article{confGIA
   , title     = "Plataforma M51-CLAV: o que há de novo?"
   , author    = "Lourenço, Alexandra and Gago, Maria Rita and Penteado, Pedro and Ramalho, José Carlos"
   , year      = "2017"
-  , note      = "Consult. 23 Set. 2018; Dísponivel em: \url{https://www.bad.pt/eventos/wp-content/uploads/2018/01/CIGIA_COM_01.pdf}"
 }
 
 @misc{compete2020
@@ -41,37 +38,127 @@
 @misc{hashFunction,
     title = {Re-Hashed: The Difference Between SHA-1, SHA-2 and SHA-256 Hash Algorithms},
     author = {Vincent Lynch},
-    note = {[Online; Consult. 10 Jan. 2019]},
-    url = {https://www.thesslstore.com/blog/wp-content/uploads/2018/08/Hashing.png}
+    note = {Consult. 10 Jan. 2019; Disponível em \url{https://www.thesslstore.com/blog/wp-content/uploads/2018/08/Hashing.png}}
 }
 
 
+%%bcrypt
+@article{sriramya2015providing,
+  title={Providing password security by salted password hashing using Bcrypt algorithm},
+  author={Sriramya, P and Karthika, RA},
+  journal={ARPN Journal of Engineering and Applied Sciences},
+  volume={10},
+  number={13},
+  year={2015}
+}
+
+@inproceedings{provos1999future,
+  title={A Future-Adaptable Password Scheme.},
+  author={Provos, Niels and Mazieres, David},
+  booktitle={USENIX Annual Technical Conference, FREENIX Track},
+  pages={81--91},
+  year={1999}
+}
+
+@article{contini2015method,
+  title={Method to Protect Passwords in Databases for Web Applications.},
+  author={Contini, Scott},
+  journal={IACR Cryptology ePrint Archive},
+  volume={2015},
+  pages={387},
+  year={2015}
+}
+
+@inproceedings{malvoni2014your,
+  title={Are your passwords safe: Energy-efficient bcrypt cracking with low-cost parallel hardware},
+  author={Malvoni, Katja and Solar, Designer and Knezovi{\'c}, Josip},
+  booktitle={WOOT'14 8th Usenix Workshop on Offensive Technologies Proceedings 23rd USENIX Security Symposium},
+  year={2014}
+}
+
+@inproceedings{wiemer2014high,
+  title={High-speed implementation of bcrypt password search using special-purpose hardware},
+  author={Wiemer, Friedrich and Zimmermann, Ralf},
+  booktitle={ReConFigurable Computing and FPGAs (ReConFig), 2014 International Conference on},
+  pages={1--6},
+  year={2014},
+  organization={IEEE}
+}
+
+@article{aggarwal2015cryptanalysis,
+  title={Cryptanalysis of Bcrypt and SHA-512 using Distributed Processing over the Cloud},
+  author={Aggarwal, Atishay and Chaphekar, Pranav and Mandrekar, Rohit},
+  journal={International Journal of Computer Applications},
+  volume={128},
+  number={16},
+  year={2015},
+  publisher={Citeseer}
+}
+
+@inproceedings{ertaul2016implementation,
+  title={Implementation and Performance Analysis of PBKDF2, Bcrypt, Scrypt Algorithms},
+  author={Ertaul, Levent and Kaur, Manpreet and Gudise, Venkata Arun Kumar R},
+  booktitle={Proceedings of the International Conference on Wireless Networks (ICWN)},
+  pages={66},
+  year={2016},
+  organization={The Steering Committee of The World Congress in Computer Science, Computer~…}
+}
+
+@misc{xilinx:zedboard,
+    title = {XUP ZedBoard},
+    author = {Xilinx},
+    note = {Consult. 12 Jan. 2019; Disponível em \url{http://www.xilinx.com/ support/university/boards- portfolio/xup- boards/ XUPZedBoard.html.}}
+}
+
 %%JWT
+@article{peyrott2016jwt,
+  title={The JWT Handbook},
+  author={Peyrott, E},
+  journal={Seattle, WA, United states},
+  year={2016}
+}
+
+@techreport{jones2015json,
+  title={Json web token (jwt)},
+  author={Jones, Michael and Bradley, John and Sakimura, Nat},
+  year={2015}
+}
 
 @misc{jwtLogo,
     title = {JSON Web Tokens},
     author = {Auth0},
-    note = {[Online; Consult. 12 Jan. 2019]},
-    url = {https://jwt.io}
+    note = {Consult. 12 Jan. 2019; Disponível em \url{https://jwt.io}}
 }
 
 @misc{jwtAPI,
     title = {JWT to authenticate Servers API’s},
     author = {Rachit Gulati},
-    note = {[Online; Consult. 13 Jan. 2019]},
-    url = {https://codeburst.io/jwt-to-authenticate-servers-apis-c6e179aa8c4e}
+    note = {Consult. 13 Jan. 2019; Disponível em \url{https://codeburst.io/jwt-to-authenticate-servers-apis-c6e179aa8c4e}}
 }
 
 @misc{jwtDiagram,
     title = {Securing Golang API using Json Web Token},
     author = {Raúl González Martínez},
-    note = {[Online; Consult. 13 Jan. 2019]},
-    url = {https://medium.com/@raul_11817/securing-golang-api-using-json-web-token-jwt-2dc363792a48}
+    note = {Consult. 13 Jan. 2019; Disponível em \url{https://medium.com/@raul_11817/securing-golang-api-using-json-web-token-jwt-2dc363792a48}}
 }
 
-@article{rfc6750
-  , title     = "The OAuth 2.0 Authorization Framework: Bearer Token Usage"
-  , author    = "Jones, M. and Hardt, D."
-  , year      = "2012"
-  , note      = "ISSN: 2070-1721, Consult. 13 Jan. 2019; Dísponivel em: \url{https://tools.ietf.org/pdf/rfc6750.pdf}"
+@techreport{rfc6750,
+  title={The oauth 2.0 authorization framework: Bearer token usage},
+  author={Jones, Michael and Hardt, Dick},
+  year={2012}
+}
+
+%%auth.gov
+@misc{authGovStats,
+    title = {Estatísticas relativas ao uso da plataforma Autenticação.Gov},
+    author = {Agência para a Modernização Administrativa},
+    note = {Consult. 14 Jan. 2019; Disponível em \url{https://www.autenticacao.gov.pt/stats-autenticacaogov}}
+}
+
+@manual{manualAuthGov,
+	title		 = "Autenticação.Gov: Fornecer de Autenticação da Administração Pública Portuguesa",
+	organization = "Administração Pública Portuguesa",
+	edition	     = "1.5.1",
+	year		 = "2018",
+	note		 = {Consult. 14 Jan. 2019; Disponível em \url{https://www.autenticacao.gov.pt/cc-documentacao}}
 }
