--- a/dissertation.tex
+++ b/dissertation.tex
@@ -153,10 +153,8 @@
 	%\printindex
 	
 	% APPENDIX --------------------------------------
-	\umappendix{Appendix}
-	
-	% Add appendix chapters
-    \input{sections/apendice.tex}
+	%\umappendix{Appendix}
+    %\input{sections/apendice.tex}
 
 	% Back Cover -------------------------------------------
 	%\umbackcover{
