--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -12,6 +12,9 @@
 \newacronym{cmd}{CMD}{Chave Móvel Digital}
 \newacronym{ama}{AMA}{Agência para a Modernização Administrativa}
 \newacronym{auth.gov}{Auth.Gov}{Autenticação.Gov}
+\newacronym{pki}{PKI}{Public key infrastucture}
+\newacronym{saml2}{SAML 2.0}{Security Assertion Markup Language v2.0}
+\newacronym{stork}{STORK}{Secure identity across borders linked}
 
 %%baseado com jwt
 \newacronym{jwt}{JWT}{JSON Web Token}
